# gm-validator

./: .dockerignore  .env.mainnet  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml  docker-compose.override.yml.example  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  image-validator.yml  image.yml
docs/: .gitkeep  handoff-w6-validator.md
scripts/: README.md  autoupdate.sh
validator/: Dockerfile  pyproject.toml
validator/src/gm_validator/: __init__.py  alpha_economics.py  alpha_oracle.py  bittensor_adapter.py  bittensor_real.py  config.py  epoch_summary.py  main.py  metagraph.py  metrics.py  processed_state.py  s3_mirror.py  scoring.py  subtensor_connect.py  validator.py  verifier.py
validator/tests/: test_alpha_economics.py  test_alpha_oracle.py  test_bittensor_real.py  test_bounded_tick.py  test_chain_cursor.py  test_compute_weights.py  test_config.py  test_epoch_summary.py  test_main_logging.py  test_main_submitter.py  test_metagraph.py  test_prune_and_state.py  test_s3_anonymous.py  test_scoring.py  test_subtensor_connect.py  test_validator_integration.py  test_weight_status.py
verifier/: Cargo.toml
verifier/src/: canonical.rs  cost.rs  errors.rs  hash.rs  lib.rs  main.rs  record.rs  signature.rs
verifier/tests/: fixture_cost_rederivation.rs  fixture_raw_hash.rs
verifier/tests/fixtures/cost_epoch/: README.md  aggregated.jsonl  aggregated_tampered.jsonl  gateway_keys.json  raw.jsonl  raw.jsonl.zst
verifier/tests/fixtures/raw_hash/: README.md  expected.txt  input.jsonl
