[project]
name = "gm-validator"
version = "0.1.0"
description = "gm validator software. Watches S3 for finalized epoch artifacts, scores miners from the cost-derived rows, and submits weights to bittensor."
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "gm contributors" }]
dependencies = [
    "boto3>=1.35,<2",
    "pydantic>=2.10,<3",
    "prometheus-client>=0.21,<0.26",
    # Real on-chain weight submission + metagraph uid lookup. Imported
    # lazily (inside functions) so the test path, which uses
    # MockSubmitter, never loads it; declared here because production
    # and `ty` resolution both need it installed.
    "bittensor>=10.3,<11",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.115",
    "ruff>=0.15",
    "boto3-stubs[s3]>=1.35",
    "moto[s3]>=5.0",
    # Test-only: the integration test compresses a raw.jsonl fixture.
    "zstandard>=0.23,<0.26",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gm_validator"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF", "S", "BLE", "C4", "PIE", "PT", "RET", "SIM"]
ignore = ["S101", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.ty]

[tool.ty.rules]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
