[package]
name = "gm-verifier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Rust verifier for gm epoch artifacts. Phase 0 scaffold; Phase 1 W6 implements raw_hash recomputation, signature verification, and the gm-verifier CLI."

[lints]
workspace = true

[[bin]]
name = "gm-verifier"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
