[package]
name = "gm-verifier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Rust verifier for gm epoch artifacts. Owns the canonical raw_hash construction (RFC 8785 JCS, sort by request_id, LF-joined, SHA-256, lower-case hex) and ed25519 signature verification. Used as a library by the Validator service and as a CLI for operator/auditor full-epoch verification."

[lints]
workspace = true

[lib]
name = "gm_verifier"
path = "src/lib.rs"

[[bin]]
name = "gm-verifier"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
zstd = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }
